almost done except map

--- a/css/sl-slide.css
+++ b/css/sl-slide.css
@@ -99,15 +99,15 @@
 	display: none;
 }
 .sl-slide-horizontal .sl-slide-inner {
-	background: #00E5EE;
+	background: #303030;
 }
 
 .sl-slide-vertical .sl-slide-inner {
-	background: #ff6a6a;
+	background: #303030;
 }
 
 .item3 .sl-slide-inner {
-	background: #74d76f;
+	background: #303030;
 }
 
 .sl-slider h2 {
