--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ body > section#slide-show {
 }
 
 #recent-works {
-    color: #fff;
+    color: #ffffff;
     background-image: url(../images/bg.jpg);
     position: static;
     width: auto;
@@ -653,34 +653,6 @@ ul.social > li > a:hover {
     border-top: 0
 }
 
-.blog .blog-item h2 {
-    margin-top: 0
-}
-
-.blog .blog-item .date span {
-    display: block;
-    text-align: center
-}
-
-.blog .blog-item .date span.day {
-    font-size: 50px;
-    line-height: 50px;
-    padding-top: 10px;
-    font-family: "Fjalla One", sans-serif
-}
-
-.blog .blog-item .date span.month {
-    font-size: 18px
-}
-
-.blog .blog-item .tag {
-    margin-top: 5px
-}
-
-.blog .blog-item .avatar {
-    margin-top: 5px
-}
-
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -707,235 +679,6 @@ select:focus, textarea:focus, input[type="text"]:focus, input[type="password"]:f
 textarea#message {
     padding: 10px 15px;
     height: 219px
-}
-
-.widget {
-    margin-bottom: 30px
-}
-
-.widget > h3 {
-    font-size: 16px;
-    margin-top: 0
-}
-
-.widget h5 {
-    margin-top: 10px
-}
-
-.widget .date {
-    margin-top: 5px;
-    padding: 8px 10px;
-    background: #FFB6C1
-}
-
-.widget .date > span {
-    display: block;
-    text-align: center;
-    font-family: "Fjalla One";
-    color: #fff
-}
-
-.widget .date > span.month {
-    font-size: 14px;
-    line-height: 14px;
-    font-weight: 700;
-    text-transform: uppercase
-}
-
-.widget .date > span.day {
-    font-size: 18px;
-    line-height: 18px
-}
-
-#pricing-table {
-    margin-top: 0px;
-    margin-bottom: 30px
-}
-
-#pricing-table .plan {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: #fff
-}
-
-#pricing-table .plan.featured {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1)
-}
-
-#pricing-table .plan > li {
-    padding: 10px 15px
-}
-
-#pricing-table .plan > li.plan-name {
-    background: rgba(0, 0, 0, 0.1)
-}
-
-#pricing-table .plan > li.plan-name h3 {
-    margin: 10px 0
-}
-
-#pricing-table .plan > li.plan-action {
-    padding: 20px 0
-}
-
-#pricing-table .plan1 {
-    background: #1abc9c
-}
-
-#pricing-table .plan2 {
-    background-color: #FF69B4;
-}
-
-#pricing-table .plan3 {
-    background: #3498db
-}
-
-#pricing-table .plan4 {
-    background-color: #CC99FF;
-}
-
-ul.gallery {
-    display: block;
-    margin: -15px
-}
-
-ul.gallery.col-1 li {
-    width: 100%
-}
-
-ul.gallery.col-2 li {
-    width: 50%
-}
-
-ul.gallery.col-3 li {
-    width: 33.3333%
-}
-
-ul.gallery.col-4 li {
-    width: 25%
-}
-
-ul.gallery li {
-    display: block;
-    padding: 0;
-    margin: 0;
-    float: left
-}
-
-ul.gallery li .desc {
-    margin: 15px
-}
-
-ul.gallery li .preview {
-    margin: 15px;
-    display: block;
-    position: relative
-}
-
-ul.gallery li .preview .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: rgba(0, 0, 0, 0.6);
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -webkit-transition: opacity 300ms;
-    -moz-transition: opacity 300ms;
-    -o-transition: opacity 300ms;
-    transition: opacity 300ms
-}
-
-ul.gallery li .preview .links {
-    width: 104px;
-    height: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -20px;
-    margin-left: -52px;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -webkit-transform: translate(0, -50px);
-    -moz-transform: translate(0, -50px);
-    -ms-transform: translate(0, -50px);
-    -o-transform: translate(0, -50px);
-    transform: translate(0, -50px);
-    -webkit-transition: 300ms;
-    -moz-transition: 300ms;
-    -o-transition: 300ms;
-    transition: 300ms
-}
-
-ul.gallery li .preview .links > a {
-    width: 50px;
-    height: 40px;
-    line-height: 40px;
-    display: inline-block;
-    text-align: center;
-    background: #FFB6C1;
-    color: #fff;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-    font-size: 18px;
-    margin: 0 1px
-}
-
-ul.gallery li .preview:hover .overlay, ul.gallery li .preview:hover .links {
-    opacity: 1;
-    filter: alpha(opacity=100)
-}
-
-ul.gallery li .preview:hover .links {
-    -webkit-transform: translate(0, 0);
-    -moz-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
-    -o-transform: translate(0, 0);
-    transform: translate(0, 0)
-}
-
-ul.faq {
-    list-style: none;
-    margin: 0
-}
-
-ul.faq li {
-    margin-top: 30px
-}
-
-ul.faq li:first-child {
-    margin-top: 0
-}
-
-ul.faq li span.number {
-    display: block;
-    float: left;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    background: #FFB6C1;
-    color: #fff;
-    font-size: 24px
-}
-
-ul.faq li > div {
-    margin-left: 70px
-}
-
-ul.faq li > div h3 {
-    margin-top: 0
-}
-
-#error {
-    text-align: center;
-    margin-top: 150px;
-    margin-bottom: 150px
 }
 
 /* carousel */
